name:                   marlowe
version:                0.3.0.0
license:                BSD3
license-file:           LICENSE
author:                 Alexander Nemish
maintainer:             alexander.nemish@iohk.io
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

library
    exposed-modules:
                        Language.Marlowe
                        Language.Marlowe.Pretty
                        Language.Marlowe.Semantics
                        Language.Marlowe.Util
                        Language.Marlowe.ACTUS
                        Language.Marlowe.ACTUS.ActusContracts
                        Language.Marlowe.Examples.CrowdFunding
                        Language.Marlowe.Examples.DepositIncentive
                        Language.Marlowe.Examples.Escrow
                        Language.Marlowe.Examples.EscrowSimple
                        Language.Marlowe.Examples.ExpCrowdFunding
                        Language.Marlowe.Examples.ExpEscrow
                        Language.Marlowe.Examples.ExpRent
                        Language.Marlowe.Examples.Rent
                        Language.Marlowe.Examples.ZCBG
                        Language.Marlowe.Examples.ZCBG2
                        Language.Marlowe.Analysis.FSSet
                        Language.Marlowe.Analysis.FSMap
                        Language.Marlowe.Analysis.FSSemantics
                        Language.Marlowe.Analysis.IntegerArray
                        Language.Marlowe.Analysis.Numbering
                        Language.Marlowe.Analysis.MkSymb
    build-depends:      base >=4.9,
                        containers,
                        sbv,
                        text,
                        template-haskell,
                        time,
                        wl-pprint -any
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

executable marlowe
    default-language:   Haskell2010
    build-depends:      base >=4.9,
                        containers,
                        marlowe,
                        mtl,
                        tasty,
                        tasty-hunit,
                        tasty-quickcheck,
                        time
    hs-source-dirs:     app
    main-is:            Main.hs

executable marlowe-ex1
    default-language:   Haskell2010
    build-depends:      base >=4.9,
                        containers,
                        marlowe,
                        mtl,
                        tasty,
                        tasty-hunit,
                        tasty-quickcheck,
                        time
    hs-source-dirs:     app
    main-is:            Ex1.hs
